# tinyproto

./: .gitignore  .hash_db  CMakeLists.txt  Cargo.toml  Makefile  Makefile.common  Makefile.cpputest  Makefile.linux  README.md  doxygen.cfg  library.json  library.properties  setup.py
.github/workflows/: main.yml
.travis/: check_install.sh  refresh_license.py  run_tests.sh
cmake/: TinyProtoConfig.cmake.in
examples/esp32_idf/spi/master/main/: app_main.c
examples/esp32_idf/spi/slave/main/: app_main.c
examples/linux/hdlc_demo/: CMakeLists.txt  hdlc_demo.cpp
examples/linux/hdlc_demo_multithread/: CMakeLists.txt  hdlc_demo_multithread.cpp
examples/linux/loopback/: CMakeLists.txt  tiny_loopback.cpp
python/: fd.cpp  main.cpp
src/: TinyPacket.h  TinyProtocol.cpp  TinyProtocol.h  TinyProtocolFd.cpp  TinyProtocolFd.h  TinyProtocolHdlc.cpp  lib.rs
src/hal/: tiny_debug.c  tiny_debug.h  tiny_serial.c  tiny_serial.h  tiny_types.c  tiny_types.h
src/hal/esp32/: esp32_hal.h  esp32_hal.inl
src/hal/freertos/: freertos_hal.h  freertos_hal.inl
src/hal/linux/: linux_hal.h  linux_hal.inl  linux_serial.inl
src/hal/macos/: macos_hal.h  macos_hal.inl  macos_serial.h  macos_serial.inl
src/hal/mingw32/: mingw32_hal.h
src/hal/win32/: win32_hal.h
src/interface/: TinySerial.h
src/link/: TinyFdLinkLayer.cpp  TinyFdLinkLayer.h  TinyHdlcLinkLayer.cpp  TinyHdlcLinkLayer.h  TinyLinkLayer.h  TinySerialFdLink.cpp  TinySerialFdLink.h  TinySerialHdlcLink.cpp  TinySerialHdlcLink.h  TinySerialLinkLayer.h
src/proto/crc/: mod.rs  tiny_crc.c
src/proto/fd/: tiny_fd.c  tiny_fd.h  tiny_fd_data_queue.c  tiny_fd_data_queue_int.h  tiny_fd_defines_int.h  tiny_fd_frames.c  tiny_fd_frames_int.h  tiny_fd_frames_queue.c  tiny_fd_frames_queue_int.h  tiny_fd_int.h  tiny_fd_on_rx_int.h  tiny_fd_peers.c  tiny_fd_peers_int.h  tiny_fd_proto_logger.c  tiny_fd_service_queue.c  tiny_fd_service_queue_int.h  tiny_fd_tx.c  tiny_fd_tx_int.h
src/proto/hdlc/high_level/: hdlc.c  hdlc.h
src/proto/hdlc/low_level/: hdlc.c  hdlc.h  hdlc_int.h  mod.rs
src/proto/light/: tiny_light.c  tiny_light.h
unittest/: fd_multidrop_tests.cpp  fd_tests.cpp  hdlc_tests.cpp  light_tests.cpp  main.rs  tiny_crc_tests.cpp  tiny_fd_abm_tests.cpp  tiny_fd_nrm_tests.cpp  tiny_fd_tests.cpp
unittest/helpers/: fake_connection.cpp  fake_connection.h  fake_endpoint.cpp  fake_endpoint.h  fake_wire.cpp  fake_wire.h  tiny_fd_helper.cpp  tiny_fd_helper.h  tiny_hdlc_helper.cpp  tiny_hdlc_helper.h  tiny_light_helper.h
